Ported packet network to 1.12.2